Add SpatialOS Unreal SDK files

--- a/workers/unreal/Game/ThirdPersonSpatial.uproject
+++ b/workers/unreal/Game/ThirdPersonSpatial.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.15",
+	"EngineAssociation": "{3FE169BA-4682-3982-6C5A-ADA19174515D}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
